This is the ChangeLog of the clone project

Created by Dr. Rolf Jansen on 2013-02-19.
Copyright (c) 2013. All rights reserved.

Note: Milestones are embraced with ••••


2014-07-12 18:15 rj - r50

   * clone.c, utils.h, utils.c
     - in case of FreeBSD transfer only non-trivial ACLs in getMetaData().
     - fix some static analyzer warnings in the key-name/value store.
     - some formatting.
     - set version to 1.0.5b.


•••• 2014-04-02 -- Created a snapshot of r49 for release as v1.0.4, stored it on Google Drive and submitted it to FreeBSD Ports ••••


2014-04-02 11:00  rj - r49

   * clone.c, clone.1
     - implemented different verbosity levels.
     - changed feedback for directory processing, instead of '.' for every kind of processing,
       show '+' for directory creation, '-' for directory deletion, and '=' for no change.
     - count the total number of errors and return it to the shell.
     - in sync mode, if a file is ignored that is hard linked, then its inode needs to be registered in the global hard link store.
     - bumped copyright period - for now 2013-2014.
     - release of version 1.0.4 (r49).

2013-11-12 18:32  rj - r48

   * clone.c, ChangeLog
     - corrected spelling in the ChangeLog.
     - set version to 1.0.4b.


•••• 2013-11-12 -- Created a snapshot of r47 for release as v1.0.3, provided it for download at GC, and submitted it to FreeBSD ports ••••


2013-11-12 10:27  rj - r47

   * clone.c
     - named pipes maybe deleted.
     - don't check directories for birth time identity.
     - release of version 1.0.3 (r47).

2013-11-11 20:13  rj - r46

   * clone.c
     - allow deleting local-domain sockets and whiteout files.

2013-08-27 18:25  rj - r45

   * clone.c, utils.c
     - formatting.
     - changed parameter name inode to key in findINode(), storeINode(), removeINode().

2013-08-19 16:05  rj - r44

   * clone.c, utils.h, utils.c
     - added ToDo list at the head of the main file (clone.c).